# video_audio

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/binbin/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/addmusic/: add_music.cpp
app/src/main/cpp/avfilter2/: avfilter2.cpp  avfilter2.h
app/src/main/cpp/ffmpeg_player/: video_player.cpp  video_player.h
app/src/main/cpp/ffmpegdecode/: ffmpeg_decode.cpp  ffmpeg_decode.h
app/src/main/cpp/ffmpegfilter/: ffmpeg_filter.cpp  ffmpeg_filter.h
app/src/main/cpp/opensles/: FFmpegMusic.cpp  FFmpegMusic.h  opensles.cpp
app/src/main/cpp/playmusic/: play_music.cpp
app/src/main/cpp/testjni/: CppBean.cpp  CppBean.h  opensles.h  play_music.cpp
app/src/main/cpp/video_play/: FFmpegMusic.cpp  Log.h  video_play.cpp
app/src/main/java/com/example/binbin/myapplication/ffmpegandroidaddmusic/: MainActivity.java
app/src/main/java/com/example/binbin/myapplication/ffmpegandroidavfilter/: MainActivity.java
app/src/main/java/com/example/binbin/myapplication/ffmpegandroidavfilter2/: MainActivity.java
app/src/main/java/com/example/binbin/myapplication/ffmpegandroiddecoder/: MainActivity.java
app/src/main/java/com/example/binbin/myapplication/ffmpegopensles/: MainActivity.java  MusicPlay.java
app/src/main/java/com/example/binbin/myapplication/ffmpegvideoplay/: MainActivity.java  Play.java  VideoView.java
app/src/main/java/com/example/binbin/myapplication/four/: MainActivity.java
app/src/main/java/com/example/binbin/myapplication/h264encoder/: H264Encoder.java  MainActivity.java
app/src/main/java/com/example/binbin/myapplication/mediacode/: MainActivity.java
app/src/main/java/com/example/binbin/myapplication/mediacode/player/: IPlayerCallBack.java  PlayerView.java  VideoPlayer.java
app/src/main/java/com/example/binbin/myapplication/muxer/: AudioEncoderThread.java  FileUtils.java  MediaMuxerActivity.java  MediaMuxerThread.java  VideoEncoderThread.java
app/src/main/java/com/example/binbin/myapplication/playffmpeg/: MainPalyFfmpegActivity.kt  VideoPlayer.kt
app/src/main/java/com/example/binbin/myapplication/seven/: MainActivity.java  OrientationSensorListener.java  VedioRecordActivity.java  VideoPlayActivity.java  VideoProgressView.java  VideoRecordSurface.java
app/src/main/java/com/example/binbin/myapplication/testjni/: MainActivity.kt  Nativecall.java
app/src/main/java/com/example/binbin/myapplication/testjni/model/: CppBean.java  Person.kt
app/src/main/java/com/example/binbin/myapplication/three/audiovideosample/: CameraFragment.java  CameraGLView.java  MainActivity.java
app/src/main/java/com/example/binbin/myapplication/three/encoder/: MediaAudioEncoder.java  MediaEncoder.java  MediaMuxerWrapper.java  MediaVideoEncoder.java
app/src/main/java/com/example/binbin/myapplication/three/glutils/: EGLBase.java  GLDrawer2D.java  RenderHandler.java
app/src/main/java/com/example/binbin/myapplication/two/activity/: ListActivity.java  MainActivity.java
app/src/main/java/com/example/binbin/myapplication/two/adapter/: FileListAdapter.java
app/src/main/java/com/example/binbin/myapplication/two/record/: AudioRecorder.java  FileUtils.java  PcmToWav.java  RecordStreamListener.java  WaveHeader.java
app/src/main/res/layout/: activity_main_avfilter2.xml  activity_main_filter.xml  activity_main_mediacode.xml  activity_main_paly_ffmpeg.xml  activity_main_testjni.xml  activity_main_three.xml  activity_main_two.xml  activity_video_play.xml  fragment_main_three.xml
app/src/main/res/menu/: main_three.xml
app/src/test/java/com/example/binbin/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
